--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,4 +1,4 @@
-.heading-wrapper {
+.header-wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -13,15 +13,18 @@
 }
 
 .header-uniq {
-    text-shadow: 1px -1px 1px #E6ECEF;
-    text-transform: uppercase;
+    text-transform: capitalize;
+}
+
+.shop-uniq {
+  color: var(--main-white);
+  text-transform: uppercase;
 }
 
 .header-count {
-    color: #E6ECEF;
+    color: var(--main-white);
 }
 
 a .header-text {
     cursor: pointer;
 }
-
