--- a/src/app/products/products-list/products-list.component.css
+++ b/src/app/products/products-list/products-list.component.css
@@ -4,3 +4,9 @@
     padding: 20px;
     border-bottom: 3px solid var(--main-blue);
 }
+
+.products-input{
+    display: block;
+    padding: 3px 3px 3px 10px;
+    margin: 10px auto;
+}
