--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -1,6 +1,7 @@
 <h3 class="products-list-heading">All avaliable products below</h3>
+<input type="text" #myInput class="products-input" placeholder="Search..." (input)="filterItem(myInput.value)">
 <app-products-item 
-  *ngFor="let productElement of products.products" 
+  *ngFor="let productElement of filteredProducts.products" 
   [product]='productElement'
   (productSelected)="onProductSelected(productElement)">
 </app-products-item>
