--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,7 +1,6 @@
 .products-wrapper {
     display: flex;
     flex-direction: row;
-    background-color: #FFEEDB;
 }
 
 .products-list-wrapper {
@@ -11,6 +10,16 @@
 .products-details-wrapper {
     flex: 2;
     position: relative;
+}
+
+.background {
+    position: fixed;
+    z-index: -1;
+    background-color: #FFEEDB;
+    top: 0;
+    height: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .select-product {
@@ -23,11 +32,5 @@
     font-size: 22px;
     padding: 10px;
     border: 1px solid var(--main-blue);
-}
-
-
-@media screen and (min-width: 760px) {
-    
-    
 }
 
