--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,4 +1,6 @@
 <div class="products-wrapper">
+  <div class="background">
+  </div>
   <div class="products-list-wrapper">
     <app-products-list
       (productWasSelected)="selectedProduct = $event"></app-products-list>
