changed getting products manner, fix minor issues, made code cleaner

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="header-wrapper">
     <a><span class="header-text header-uniq">Welcome to the <span class="shop-uniq">shop</span></span></a>
-    <span class="header-text">Products count: <span class="header-count">{{ products.count_products }}</span></span>
+    <span class="header-text">Products count: <span class="header-count">{{ countProducts }}</span></span>
   </div>
 </header>
