--- a/src/app/products/products-list/products-list.component.css
+++ b/src/app/products/products-list/products-list.component.css
@@ -7,6 +7,7 @@
 
 .input-wrapper {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     padding: 5px;
@@ -21,4 +22,10 @@
     font-weight: 300;
     outline: none;
     letter-spacing: 1.5px;
+}
+
+@media screen and (min-width: 960px) {
+    .input-wrapper {
+        flex-direction: row;
+    }
 }
