--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
-<div class="container">
+<div class="container-fluid">
   <app-products></app-products>
 </div>
 
