--- a/src/app/products/products-list/products-item/products-item.component.css
+++ b/src/app/products/products-list/products-item/products-item.component.css
@@ -1,41 +1,32 @@
 .list-item-wrapper {
     border: 1px solid var(--main-blue);
     background-color: #E6ECEF;
-    padding: 5px;
-    margin: 5px;
-    display: flex;
-    flex-direction: column;
     cursor: pointer;
     font-size: 0.7rem;
     box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
 }
 
-
-.list-item-image-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0 5px;
-}
-
 .list-item-image {
-    width: 60px;
+    max-width: 60px;
+    max-height: 60px;
+    width: 100%;
+    height: 100%;
 }
 
 .list-item-description {
-    padding: 3px;
     color:#111D4A;
+    margin: 0;
 }
 
 .list-item-name {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
+    font-weight: bold;
+    padding: 3px;
 }
 
 .price-uniq {
     color: var(--main-red);
-    font-weight: bold;
-    font-size: 110%;
+    font-size: 1.1rem;
 }
 
 .selected {
@@ -44,16 +35,14 @@
 
 @media screen and (min-width: 760px) {
     
-    .list-item-wrapper {
+    .list-item-wrapper,
+    .list-item-name {
         font-size: 1rem;
-        flex-direction: row;
     }
 
     .list-item-image {
         width: 70px;
+        width: 70px;
     }
 
-    .list-item-name {
-        font-size: 1rem;
-    }
 }
