--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,14 +1,16 @@
-<div class="products-wrapper">
+<div class="products-wrapper row m-0">
   <div class="background">
   </div>
-  <div class="products-list-wrapper">
+  <div class="products-list-wrapper col-5 pl-sm-3 pr-sm-3 pl-1 pr-1">
     <app-products-list
-      (productWasSelected)="selectedProduct = $event"></app-products-list>
+        (productWasSelected)="selectedProduct = $event">
+    </app-products-list>
   </div>
-  <div class="products-details-wrapper">
+  <div class="products-details-wrapper col-7 pl-sm-3 pr-sm-3 pl-1 pr-1">
     <app-products-details
       *ngIf="selectedProduct; else initialText"
-      [product]="selectedProduct"></app-products-details>
+      [product]="selectedProduct">
+    </app-products-details>
       <ng-template #initialText>
         <p class="select-product">Please select a product from the list to get more information</p>
       </ng-template>
