--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -1,28 +1,41 @@
-<h4 class="products-list-heading text-center p-3 m-0">All avaliable products below</h4>
 <div class="container-fluid">
-  <div class="search-field-wrapper row text-center align-items-center mt-3 mb-3 m-0">
-    <div class="input-wrapper col-12 p-0 pb-3 pb-lg-0 pb-md-0">
-      <label for="search-input">Search for desire one!</label>
-      <input  id="search-input" 
-              type="text" 
-              #myInput 
-              class="products-input" 
-              placeholder="Search..." 
-              (input)="filterItem(myInput.value)">
+  <div class="row">
+      <div class="col-12">
+        <h4 class="products-list-heading text-center">All avaliable products below</h4>
+      </div>
+      <div class="search-field-wrapper col-12">
+        <div class="row align-items-center">
+          <p class="col-12 text-center">Search or choose category</p>
+          <div class="input-wrapper col-12 col-sm-6 col-md-6 col-lg-6 mb-3">
+            <label for="search-input">Search for desire one!</label>
+            <input  id="search-input" 
+                    type="text" 
+                    #myInput 
+                    class="products-input" 
+                    placeholder="Search..." 
+                    (input)="filterItem(myInput.value)">
+          </div>
+          <div class="col-12 col-sm-6 col-md-6 col-lg-6">
+            <ul class="caterogy-wrapper">
+                <li *ngFor="let category of categoryList; let i = index"
+                    (click)="onCategoryChosen(category)"
+                    [ngClass]="{'category-item': true, 'selected': i === choosenCategoryIndex}">
+                  <span [ngClass]="{'category-text': true}">{{ category }}</span>
+                </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+  <div class="col-12">
+    <div class="row">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3" *ngFor="let productElement of filteredProducts">
+        <app-products-item
+          [product]='productElement'
+          (click)="onClickMade(productElement)"
+          [selected]="choosenElement"
+          (productSelected)="onProductSelected(productElement)">
+        </app-products-item>
+      </div>
     </div>
-    <ul class="caterogy-wrapper col-12 p-0 mt-2">
-        <li *ngFor="let category of categoryList; let i = index"
-            (click)="onCategoryChosen(category)"
-            [ngClass]="{'category-item': true, 'selected': i === choosenCategoryIndex}">
-          <span [ngClass]="{'category-text': true}">{{ category }}</span>
-        </li>
-    </ul>
   </div>
 </div>
-<app-products-item
-  *ngFor="let productElement of filteredProducts" 
-  [product]='productElement'
-  (click)="onClickMade(productElement)"
-  [selected]="choosenElement"
-  (productSelected)="onProductSelected(productElement)">
-</app-products-item>
