--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,28 @@
-<header class="container-fluid">
-  <nav class="header-wrapper row">
-    <div class="col-12 col-sm-6 header-text text-md-left text-lg-left text-center">
-      <span class="header-uniq">
-        <a href="#" class="main-header-logo">Welcome to the <span class="text-uppercase shop-uniq">shop</span>
-        </a>
-    </span>
-    </div>
-    <div class="col-12 col-sm-6 header-text text-md-right text-lg-rigth text-center">Products count: 
-      <span class="header-count-uniq">{{ countProducts }}</span>
-    </div>
+<header class="header">
+  <nav class="navbar navbar-expand-sm navigation fixed-top">
+      <a href="#" class="navbar-brand">
+          <i class="fa fa-shopping-basket"></i>
+            Products
+          <span class="prod-uniq">List</span>
+      </a>
+      <button class="navbar-toggler"
+              data-toggle="collapse" 
+              data-target="#navbarMenu"
+              (click)="onClick($event)">
+          <i class="fa fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarMenu">
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a href="#" class="nav-link active">Products</a>
+              </li>
+              <li class="nav-item">
+                  <a href="#" class="nav-link">Contact Us</a>
+              </li>
+              <li class="nav-item">
+                  <a href="#" class="nav-link">Products Count {{ countProducts }}</a>
+              </li>
+          </ul>
+      </div>
   </nav>
 </header>
