--- a/src/app/products/products-details/products-details.component.css
+++ b/src/app/products/products-details/products-details.component.css
@@ -2,17 +2,48 @@ p {
     margin: 0 !important;
 }
 
-.product-detail-wrapper {
+.main-wrapper {
     position: fixed;
-    top: 120px;
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-    border: 1px solid var(--main-blue);
-    padding: 10px;
-    font-size: 0.8rem;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 2000;
+}
+
+
+.product-detail-wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    animation: move 1s;
+    max-width: 90%;
     background-color: #E6ECEF;
-    box-shadow: 0px 1px 7px 2px rgba(0,0,0,0.75);
+    padding: 20px;
+    font-size: 0.8rem;
+}
+
+.close-btn {
+    position: absolute;
+    top: 3%;
+    left: 90%;
+    border: none;
+    z-index: 200;
+    font-size: 20px;
+    background-color: transparent;
+    transition: all .2s ease-in;
+}
+
+.close-btn:hover{
+    font-size: 24px;
+}
+
+.products-detail-image-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .product-detail-main-info {
@@ -20,9 +51,11 @@ p {
 }
 
 .product-detail-image {
-    max-height: 150px;
-    height: 100%;
     max-width: 100%;
+}
+
+.product-detail-heading {
+    font-size: 0.8rem;
 }
 
 .product-unique {
@@ -44,90 +77,65 @@ p {
     border-bottom: 1px solid var(--main-blue);
 }
 
-.product-detail-heading {
-    font-size: 0.7rem;
-    color: var(--main-blue);
-    padding: 0;
-    padding-top: 10px !important;
-}
-
-.product-detail-additional-info {
-    margin: 10px 0;
-    color: var(--main-blue);
-}
-
-.product-detail-additional-item {
-    display: block;
-    color: var(--main-blue);
-    font-size: 0.7rem;
-}
-
-.product-detail-additional-else {
-    text-align: center;
-    color: var(--main-blue);
-}
-
-.product-detail-additional-heading {
-    font-size: 0.7rem;
-}
-
-.product-detail-additional-heading:last-child {
-    text-align: center;
-}
-
-.price-uniq {
-  font-weight: bold;
-  color: var(--main-red);
-}
-
 @media screen and (min-width: 576px) {
     .product-detail-wrapper {
-        top: 150px;
+        font-size: 0.8rem;
     }
 
-    .product-detail-main-info {
-        text-align: left;
+    .product-detail-heading {
+        font-size: 0.9rem;
     }
-} 
+
+    .product-detail-additional-heading:last-child {
+        margin: 0 auto;
+    }
+
+    .product-detail-image {
+        max-width: 85%;
+    }
+
+    .close-btn {
+        left: 95%;
+    }
+}
 
 
 
 @media screen and (min-width: 768px) {
 
     .product-detail-wrapper {
-        font-size: 1.0rem;
-        margin: 20px;
-        top: 120px;
+        font-size: 0.9rem;
     }
 
-    .product-detail-image{
-        max-height: 180px;
-        max-width: 95%;
-        padding: 0;
+    .product-detail-additional-heading:last-child {
+        text-align: center;
+    }
+
+    .product-detail-image {
+        max-width: 100%;
+    }
+}
+
+@media screen and (min-width: 992px) {
+
+    .product-detail-wrapper {
+        font-size: 1rem;
     }
 
     .product-detail-heading {
-        text-align: justify;
         font-size: 1rem;
     }
 
-    .product-detail-main-item {
-        padding: 3px;
-    }
-
-    .product-detail-main-description {
-        padding: 3px;
-    }
-
-    .product-detail-main-item {
-        padding: 3px;
-    }
-
-    .product-detail-additional-heading {
-        font-size: 1rem;
-    }
-
-    .product-detail-additional-else {
+    .product-detail-additional-heading:last-child {
         text-align: left;
+    }
+}
+
+@keyframes move {
+    from {
+        top: -50%;
+    }
+    to {
+        top: 50%; 
     }
 }
