--- a/src/app/products/products-list/products-item/products-item.component.css
+++ b/src/app/products/products-list/products-item/products-item.component.css
@@ -1,27 +1,72 @@
 .list-item-wrapper {
-    border: 1px solid var(--main-blue);
-    background-color: #E6ECEF;
+    width: 100%;
+    background-color: white;
+    color: white;
+    border-radius: 3px;
+    border: 2px solid var(--main-blue);
+    position: relative;
+}
+
+.list-item-wrapper:hover .helper {
+    opacity: 1;
+}
+
+.list-item-image-wrapper {
+    justify-content: center;
+    border-radius: 3px;
+    display: flex;
+    width: 90%;
+    max-height: 200px;
+    height: 100%;
+    position: relative;
+    margin: 0 auto;
+    padding-bottom: 3px;
+    border-bottom: 2px solid var(--main-blue);
+}
+
+.helper {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 200;
+    background-color: rgba(0, 0, 0, .3);
+    opacity: 0;
+    transition: opacity .3s ease-in;
     cursor: pointer;
-    font-size: 0.7rem;
-    box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.75);
+}
+
+.helper-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 14px;
+    text-align: center;
 }
 
 .list-item-image {
-    max-width: 60px;
-    max-height: 60px;
-    width: 100%;
-    height: 100%;
+    width: 80%;
 }
 
-.list-item-description {
+.list-item-description-wrapper {
+    padding: 20px;
+    color:#111D4A;
+}
+
+/* .list-item-description {
     color:#111D4A;
     margin: 0;
-}
+} */
 
 .list-item-name {
-    font-size: 0.8rem;
+    font-size: 1.2rem;
     font-weight: bold;
-    padding: 3px;
+}
+
+.list-item-price {
+    text-align: center;
 }
 
 .price-uniq {
@@ -33,7 +78,7 @@
     border: 2px solid var(--main-red);
 }
 
-@media screen and (min-width: 760px) {
+@media screen and (min-width: 576px) {
     
     .list-item-wrapper,
     .list-item-name {
@@ -41,8 +86,6 @@
     }
 
     .list-item-image {
-        width: 70px;
-        width: 70px;
+        width: 100%;
     }
-
 }
