--- a/src/app/products/products-list/products-item/products-item.component.html
+++ b/src/app/products/products-list/products-item/products-item.component.html
@@ -1,17 +1,18 @@
-<div class="row m-1" (click)="onSelected()" [ngClass]="{'list-item-wrapper': true, 'selected': selected === product}">
-  <div class="list-item-image-wrapper col-12 col-sm-4 col-md-3 col-lg-3 m-0 p-1 text-center">
-    <img class="list-item-image" [src]="product.img" alt="">
-  </div>
-  <div class="list-item-description-wrapper col-12 col-sm-8 col-md-9 col-lg-9 m-0 p-1 text-center text-md-left text-sm-left text-lg-left">
-    <h4 class="list-item-description list-item-name">{{product.name.split(' ').slice(0,3).join(' ') }}</h4>
-    <p class="list-item-description list-item-company">Company: {{product.brand}}</p>
-    <p class="list-item-description list-item-code">Code: {{product.asin}}</p>
-    <p class="list-item-description list-item-price">Price: 
-        <span class="price-uniq text-bold">
-          <strong>{{product.price | currency: product.currency}}</strong>
+<div (click)="onSelected()" [ngClass]="{'list-item-wrapper': true, 'selected': selected === product}">
+      <div class="list-item-image-wrapper">
+        <img class="list-item-image" [src]="product.img" alt="">
+        <span class="helper">
+          <span class="helper-text">click to see more detail about product</span>
         </span>
-    </p>
-  </div>
+      </div>
+      <div class="list-item-description-wrapper">
+        <h4 class="list-item-description list-item-name">{{ slicedProductName }}</h4>
+        <p class="list-item-description list-item-company">Company: {{product.brand}}</p>
+        <p class="list-item-description list-item-code">Code: {{product.asin}}</p>
+        <p class="list-item-description list-item-price">Price: 
+            <span class="price-uniq">
+              <strong>{{product.price | currency: product.currency}}</strong>
+            </span>
+        </p>
+      </div>
 </div>
-
-
