--- a/src/app/products/products-list/products-list.component.css
+++ b/src/app/products/products-list/products-list.component.css
@@ -1,7 +1,11 @@
 .products-list-heading {
-    font-size: 1rem;
+    font-size: 1.4rem;
     color: var(--main-blue);
     border-bottom: 3px solid var(--main-blue);
+}
+
+.container-fluid {
+    margin-top: 72px !important;
 }
 
 .input-wrapper {
