--- a/src/app/products/products-list/products-item/products-item.component.css
+++ b/src/app/products/products-list/products-item/products-item.component.css
@@ -52,13 +52,12 @@
 
 .list-item-description-wrapper {
     padding: 20px;
-    color:#111D4A;
 }
 
-/* .list-item-description {
+.list-item-description {
     color:#111D4A;
     margin: 0;
-} */
+}
 
 .list-item-name {
     font-size: 1.2rem;
