changed the way of components communication from input output chains with the ngrx store. added effect to get data from http directly in store.

--- a/src/app/products/products-list/products-item/products-item.component.html
+++ b/src/app/products/products-list/products-item/products-item.component.html
@@ -1,4 +1,4 @@
-<div (click)="onSelected()" [ngClass]="{'list-item-wrapper': true, 'selected': selected === product}">
+<div (click)="onSelected()" [ngClass]="{'list-item-wrapper': true, 'selected': isSelected}">
       <div class="list-item-image-wrapper">
         <img class="list-item-image" [src]="product.img" alt="">
         <span class="helper">
