--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -13,27 +13,24 @@
                     class="products-input" 
                     placeholder="Search..." 
                     [(ngModel)]="inputValue"
-                    (input)="filterItem()">
+                    (input)="onSearchInputEntered()">
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-6">
             <ul class="caterogy-wrapper">
                 <li *ngFor="let category of categoryList; let i = index"
                     (click)="onCategoryChosen(category)"
                     [ngClass]="{'category-item': true, 'selected': i === choosenCategoryIndex}">
-                  <span [ngClass]="{'category-text': true}">{{ category }}</span>
+                  <span class="category-text">{{ category }}</span>
                 </li>
             </ul>
           </div>
         </div>
       </div>
-  <div class="col-12">
+  <div class="col-12" *ngIf="productsState$" >
     <div class="row">
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3" *ngFor="let productElement of filteredProducts">
         <app-products-item
-          [product]='productElement'
-          (click)="onClickMade(productElement)"
-          [selected]="choosenElement"
-          (productSelected)="onProductSelected(productElement)">
+          [product]='productElement'>
         </app-products-item>
       </div>
     </div>
