--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
 <div class="container-fluid">
-  <app-products></app-products>
+    <router-outlet></router-outlet>
 </div>
-
 
