--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,13 +14,10 @@
       <div class="collapse navbar-collapse" id="navbarMenu">
           <ul class="navbar-nav">
               <li class="nav-item">
-                  <a href="#" class="nav-link active">Products</a>
+                  <a routerLink="/home" routerLinkActive="active" href="#" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                  <a href="#" class="nav-link">Contact Us</a>
-              </li>
-              <li class="nav-item">
-                  <a href="#" class="nav-link">Products Count {{ countProducts }}</a>
+                  <a routerLink="/products/categories" routerLinkActive="active" href="#" class="nav-link">Products</a>
               </li>
           </ul>
       </div>
