--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -13,13 +13,13 @@
                     class="products-input" 
                     placeholder="Search..." 
                     [(ngModel)]="inputValue"
-                    (input)="onSearchInputEntered()">
+                    (input)="onSearchInputCheck()">
           </div>
           <div class="col-12 col-sm-6 col-md-6 col-lg-6">
             <ul class="caterogy-wrapper">
                 <li *ngFor="let category of categoryList; let i = index"
                     (click)="onCategoryChosen(category)"
-                    [ngClass]="{'category-item': true, 'selected': i === choosenCategoryIndex}">
+                    [ngClass]="{'category-item': true, 'selected': selectedCategory === category}">
                   <span class="category-text">{{ category }}</span>
                 </li>
             </ul>
